Add cards and contact sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ crossorigin="anonymous">
 <!-- google fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" 
+rel="stylesheet">
 
 </head>
 <body>
@@ -89,6 +90,250 @@ crossorigin="anonymous">
         </ul>
       </div>
     </main>
+
+    <!-- Cards Section -->
+    <!-- firts card -->
+    <section class="card__section">
+      <div class="card mb-3 rounded-3 card__each">
+        <div class="row g-0 first__card">
+          <div class="col-md-6">
+            <img src="images/Snapshoot Portfolio 2.svg" class="img-fluid rounded-start img" alt="Illustration of Arteto">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title fz-40 card__title">Tonic</h5>
+              <div class="d-flex card__position">
+                <h6 class="company__name align-self-start fz-18-2">CANOPY</h6>
+                <ul class="tech d-flex align-self-center">
+                  <li class="bed fz-18-3">Back End Dev</li>
+                  <li class="y2015 fz-18-3">2015</li>
+                </ul>
+              </div>
+              <p class="card-text fz-16-2 card__desc">A daily selection of privately personalized reads; 
+                no accounts or sign-ups required.</p>
+              <div class="tech__card">
+                <ul class="list-unstyled d-flex justify-content-around">
+                  <li class="fz-12 tech__card__li">html</li>
+                  <li class="fz-12 tech__card__li">css</li>
+                  <li class="fz-12 tech__card__li">javaScript</li>
+                </ul>
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-primary see__button">See Project</button>
+          </div>
+        </div>
+      </div>
+      <!-- second card -->
+      <div class="card mb-3 rounded-3 my-5">
+        <div class="row g-0 first__card d-flex">
+          <div class="col-md-6 order-1">
+            <img src="images/Snapshoot Art.svg" class="img-fluid rounded-start img" alt="Illustration of Art Printing">
+          </div>
+          <div class="col-md-6 order-0">
+            <div class="card-body">
+              <h5 class="card-title fz-40 card__title">Multi-Post Stories</h5>
+              <div class="d-flex card__position">
+                <h6 class="company__name align-self-start fz-18-2">FACEBOOK</h6>
+                <ul class="tech d-flex align-self-center">
+                  <li class="bed fz-18-3">Full Stack Dev</li>
+                  <li class="y2015 fz-18-3">2015</li>
+                </ul>
+              </div>
+              <p class="card-text fz-16-2 card__desc">Experimental content creation feature that allows 
+                users to add to an existing story over the course of a day without spamming their friends.
+              </p>
+              <div class="tech__card tech__card__ruby">
+                <ul class="list-unstyled d-flex justify-content-around">
+                  <li class="fz-12 tech__card__li">html</li>
+                  <li class="fz-12 tech__card__li">Ruby on rails</li>
+                  <li class="fz-12 tech__card__li">css</li>
+                  <li class="fz-12 tech__card__li">javaScript</li>
+                </ul>
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-primary see__button">See Project</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- third card -->
+      <div class="card mb-3 rounded-3 my-5">
+        <div class="row g-0 first__card">
+          <div class="col-md-6">
+            <img src="images/Snapshoot Portfolio.svg" class="img-fluid rounded-start img" 
+            alt="Illustration of Tanner Christensen Bio">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title fz-40 card__title">Facebook 360</h5>
+              <div class="d-flex card__position">
+                <h6 class="company__name align-self-start fz-18-2">FACEBOOK</h6>
+                <ul class="tech d-flex align-self-center">
+                  <li class="bed fz-18-3">Full Stack Dev</li>
+                  <li class="y2015 fz-18-3">2015</li>
+                </ul>
+              </div>
+              <p class="card-text fz-16-2 card__desc">Exploring the future of media in Facebook's first Virtual Reality app;
+                a place to discover and enjoy 360 photos and videos on Gear VR.
+              </p>
+              <div class="tech__card tech__card__ruby">
+                <ul class="list-unstyled d-flex justify-content-around">
+                  <li class="fz-12 tech__card__li">html</li>
+                  <li class="fz-12 tech__card__li">Ruby on rails</li>
+                  <li class="fz-12 tech__card__li">css</li>
+                  <li class="fz-12 tech__card__li">javaScript</li>
+                </ul>
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-primary see__button">See Project</button>
+          </div>
+        </div>
+      </div>
+      <!-- Fourth Card -->
+      <div class="card mb-3 rounded-3 my-5">
+        <div class="row g-0 first__card d-flex">
+          <div class="col-md-6 order-1">
+            <img src="images/Snapshoot Availability.png" class="img-fluid rounded-start img" 
+            alt="Illustration of a Calendar">
+          </div>
+          <div class="col-md-6 order-0">
+            <div class="card-body">
+              <h5 class="card-title fz-40 card__title">Uber Navigation</h5>
+              <div class="d-flex card__position">
+                <h6 class="company__name align-self-start fz-18-2">FACEBOOK</h6>
+                <ul class="tech d-flex align-self-center">
+                  <li class="bed fz-18-3">Lead Developer</li>
+                  <li class="y2015 fz-18-3">2018</li>
+                </ul>
+              </div>
+              <p class="card-text fz-16-2 card__desc">A smart assistant to make driving more safe, efficient, and fun by 
+                unlocking your most expensive computer: your car.
+              </p>
+              <div class="tech__card tech__card__ruby">
+                <ul class="list-unstyled d-flex justify-content-around">
+                  <li class="fz-12 tech__card__li">html</li>
+                  <li class="fz-12 tech__card__li">Ruby on rails</li>
+                  <li class="fz-12 tech__card__li">css</li>
+                  <li class="fz-12 tech__card__li">javaScript</li>
+                </ul>
+              </div>
+            </div>
+            <button type="button" class="btn btn-outline-primary see__button">See Project</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Myself Section -->
+
+    <section class="container-fluid d-flex bg-white aboutmyself flex-wrap">
+      <div class="col-md-5 col-12">
+        <h2 class="fz-40 about">
+          About <br>
+          Myself
+        </h2>
+        <p class="fz-16-2 about__p">Hello I’m a software developer! I can help you build a product , 
+          feature or website Look through some of my work and experience
+          ! If you like what you see and have a project you need coded, don’t 
+          hesitate to contact me.
+        </p>
+        <h4 class="lets__about fz-16">
+          LET'S CONNECT
+        </h3>
+        <ul class="d-flex list-unstyled icons__about">
+          <li class="">
+            <a class="" href="#">
+              <img src="images/twitter.png" alt="twitter icon">
+            </a>
+          </li>
+          <li class="">
+            <a class="" href="#">
+              <img src="images/Linkedin.svg" alt="linkedin icon">
+            </a>
+          </li>
+          <li class="">
+            <a class="" href="#">
+              <img src="images/M.png" alt="medium icon">
+            </a>
+          </li>
+          <li class="">
+            <a class="" href="#">
+              <img src="images/github.svg" alt="github icon">
+            </a>
+          </li>
+          <li class="">
+            <a class="" href="#">
+              <img src="images/hand.svg" alt="angel icon">
+            </a>
+          </li>
+        </ul>
+        <button type="button" class="btn btn-outline-primary get__button">Get My Resume</button>
+      </div>
+
+      <div class="col-md-7 col-12">
+        <ul class="list-unstyled knowledges d-flex flex-column">
+          <li class="a_leng">
+            <div class="zleng d-flex justify-content-between">
+              <h3 class="sleng fz-20">Languages</h3>
+              <img class="harrow" src="images/harrow .png" width="2%" height="2%" alt="">
+            </div>
+            <ul class="list-unstyled d-flex justify-content-around tech__about">
+              <li class="ijs tech__about__li">
+                <img class="appimg" src="images/Ellipse js.svg" alt="javascript icon">
+                <p class="appt fz-15">JavaScript</p>
+              </li>
+              <li class="ihtml tech__about__li">
+                <img class="appimg" src="images/Ellipse html.svg" alt="html icon">
+                <p class="appt fz-15">HTML</p>
+              </li>
+              <li class="icss tech__about__li">
+                <img class="appimg" src="images/Ellipse css.svg" alt="CSS icon">
+                <p class="appt fz-15">Css</p>
+              </li>
+            </ul>
+          </li>
+          <li class="framw border-bottom">
+            <div class="zframw d-flex justify-content-between">
+              <h3 class="sframw fz-20 aboutme__skills">Frameworks</h3>
+              <img class="varrow" src="images/varrow.png" height="1%" width="1%" alt="">
+            </div> 
+          </li>
+          <li class="skill border-bottom">
+            <div class="zskill d-flex justify-content-between">
+              <h3 class="sskill fz-20 aboutme__skills">Skills</h3>
+              <img class="varrow" src="images/varrow.png" height="1%" width="1%" alt="">
+            </div> 
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Contactme Section -->
+    <section class="contact">
+      <div class="contactme">
+        <h2 class="contact_ask fz-40 text-center">Contact me</h2>
+        <p class="contact_exp fz-20 text-center">If you have an application you are interested in developing, a feature 
+          that you need built or a project that needs coding. I’d love to help with it</p>
+          <form class="form">
+            <div class="mb-3">
+              <label for="name__form" class="form-label"></label>
+              <input type="name" class="form-control input__name" id="name__form" aria-describedby="emailHelp"
+              placeholder="Alexandra Loremipsum">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label"></label>
+              <input type="email" class="form-control input__email" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="alexandra@gmail.com">
+            </div>
+            <div class="form-floating">
+              <textarea class="form-control input__message" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+            </div>
+            <div class="button__form">
+              <button type="submit" class="btn btn-outline-primary btn-light">Get in touch</button>
+            </div>
+          </form>
+      </div>
+    </section>
   </div>  
 
 
